# claude-monitor

./: README.md  anthropic_usage.py  display.py  main.py  pricing.py  pyproject.toml  requirements.txt  store.py  watcher.py
claude_monitor/: __main__.py  display.py  main.py  store.py  watcher.py
docs/superpowers/plans/: 2026-03-26-claude-monitor.md  2026-03-29-anthropic-api-usage.md
docs/superpowers/specs/: 2026-03-26-chart-axis-labels-design.md  2026-03-26-claude-monitor-design.md  2026-03-28-anthropic-api-usage-design.md  2026-03-28-directory-color-coding-design.md
tests/: test_anthropic_usage.py  test_pricing.py  test_store.py  test_watcher.py
