[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-monitor"
version = "0.1.0"
description = "Live terminal dashboard for Claude Code token usage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "watchdog>=3.0.0",
]
classifiers = [
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/shreyansb/claude-monitor"

[project.scripts]
claude-monitor = "claude_monitor.main:main"
